--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "chai": "^4.1.2",
     "eslint": "^5.0.1",
     "htmlhint": "^0.9.13",
+    "leaflet.markercluster": "^1.3.0",
     "mocha": "^5.1.1",
     "nyc": "^11.7.1",
-    "opener": "^1.4.3"
+    "opener": "^1.4.3",
+    "please-wait": "0.0.5"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.5",
