--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "chai": "^4.1.2",
     "eslint": "^5.0.1",
     "htmlhint": "^0.9.13",
+    "leaflet": "^1.3.3",
     "leaflet.markercluster": "^1.3.0",
     "mocha": "^5.1.1",
     "nyc": "^11.7.1",
